Fix size on mobile

--- a/src/components/style/card.css
+++ b/src/components/style/card.css
@@ -132,6 +132,6 @@ body {
   }
 
   .slider .list .item .content h2 {
-    font-size: 70px;
+    font-size: 45px;
   }
 }
